# 20251022T002838_devdinho_desafio-aiqfome

./: .env.example  .pycodestyle  Desafio.md  LICENSE  README.md  docker-compose.yaml
.github/workflows/: sonarcloud.yml
service/: .flake8  Dockerfile  pyproject.toml
service/scripts/: run_unit_tests.sh  start-lint.sh  start.sh
service/src/: gunicorn_config.py  manage.py
service/src/aiqfome/: asgi.py  urls.py  wsgi.py
service/src/aiqfome/api/: FavoritesRestView.py  __init__.py
service/src/aiqfome/migrations/: 0001_initial.py  0002_initial.py
service/src/aiqfome/models/: Favorites.py  __init__.py
service/src/aiqfome/serializers/: FavoritesSerializer.py  __init__.py
service/src/aiqfome/settings/: __init__.py  base.py  env.py
service/src/aiqfome/tests/: test_favorites.py
service/src/authentication/: __init__.py  apps.py
service/src/authentication/admin/: CustomerAdmin.py  GroupsAdmin.py  __init__.py
service/src/authentication/api/: CreateCustomerRestView.py  CustomerRestView.py  __init__.py
service/src/authentication/migrations/: 0001_initial.py  0002_alter_customer_email_alter_historicalcustomer_email_and_more.py  0003_remove_customer_unique_email_ci_alter_customer_email_and_more.py
service/src/authentication/models/: Customer.py  Groups.py  __init__.py
service/src/authentication/serializers/: CustomerSerializer.py  __init__.py
service/src/authentication/tests/: test_authentication.py  test_customers.py
service/src/utils/: FakeStoreProxyViewSet.py  cache_utils.py  constants.py
